--- a/INTEL/EFI/OC/Kexts/IntelBluetoothFirmware.kext/Contents/Info.plist
+++ b/INTEL/EFI/OC/Kexts/IntelBluetoothFirmware.kext/Contents/Info.plist
@@ -46,6 +46,8 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
 			<key>IOProviderClass</key>
@@ -60,6 +62,8 @@
 			<key>CFBundleIdentifier</key>
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
+			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
 			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
@@ -76,6 +80,8 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
 			<key>IOProviderClass</key>
@@ -90,6 +96,8 @@
 			<key>CFBundleIdentifier</key>
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
+			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
 			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
@@ -106,6 +114,8 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
 			<key>IOProviderClass</key>
@@ -120,6 +130,8 @@
 			<key>CFBundleIdentifier</key>
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
+			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
 			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
@@ -136,6 +148,8 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
 			<key>IOProviderClass</key>
@@ -151,6 +165,8 @@
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
 			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
+			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
 			<key>IOProviderClass</key>
@@ -165,6 +181,8 @@
 			<key>CFBundleIdentifier</key>
 			<string>com.zxystd.IntelBluetoothFirmware</string>
 			<key>IOClass</key>
+			<string>IntelBluetoothFirmware</string>
+			<key>IOMatchCategory</key>
 			<string>IntelBluetoothFirmware</string>
 			<key>IOProbeScore</key>
 			<integer>4000</integer>
