--- a/INTEL/EFI/OC/Kexts/itlwmx.kext/Contents/Info.plist
+++ b/INTEL/EFI/OC/Kexts/itlwmx.kext/Contents/Info.plist
@@ -27,17 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E608c</string>
+	<string>11A1027</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19E258</string>
+	<string>16C58</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1150</string>
+	<string>1110</string>
 	<key>DTXcodeBuild</key>
-	<string>11E608c</string>
+	<string>11A1027</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>itlwmx</key>
@@ -57,9 +57,9 @@
 				<key>WiFi_1</key>
 				<dict>
 					<key>password</key>
-					<string>123456</string>
+					<string></string>
 					<key>ssid</key>
-					<string>Naveen</string>
+					<string></string>
 				</dict>
 			</dict>
 		</dict>
