--- a/AMD/EFI/OC/Kexts/VoodooTSCSyncAMD.kext/Contents/Info.plist
+++ b/AMD/EFI/OC/Kexts/VoodooTSCSyncAMD.kext/Contents/Info.plist
@@ -3,77 +3,72 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18E226</string>
+	<string>19G73</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>NVMeFix</string>
+	<string>VoodooTSCSyncAMD</string>
+	<key>CFBundleGetInfoString</key>
+	<string>1.3.0, Copyright 2009 Cosmo1t and 2010 fumoboy007</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.acidanthera.NVMeFix</string>
+	<string>org.voodoo.driver.VoodooTSCSyncAMD</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>NVMeFix</string>
+	<string>VoodooTSCSyncAMD</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0.2</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.2</string>
+	<string>1.3.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10E1001</string>
+	<string>11E608c</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18E219</string>
+	<string>16C58</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1020</string>
+	<string>1150</string>
 	<key>DTXcodeBuild</key>
-	<string>10E1001</string>
+	<string>11E608c</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>org.acidanthera.NVMeFix</key>
+		<key>VoodooTSCSyncAMD</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.acidanthera.NVMeFix</string>
+			<string>org.voodoo.driver.VoodooTSCSyncAMD</string>
 			<key>IOClass</key>
-			<string>NVMeFix</string>
+			<string>VoodooTSCSyncAMD</string>
 			<key>IOMatchCategory</key>
-			<string>NVMeFix</string>
+			<string>VoodooTSCSyncAMD</string>
+			<key>IOPropertyMatch</key>
+			<dict>
+				<key>IOCPUNumber</key>
+				<integer>7</integer>
+			</dict>
 			<key>IOProviderClass</key>
-			<string>IOResources</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>AppleACPICPU</string>
 		</dict>
 	</dict>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2019 acidanthera. All rights reserved.</string>
-	<key>OSBundleCompatibleVersion</key>
-	<string>1.0</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.12</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>as.vit9696.Lilu</key>
-		<string>1.4.1</string>
-		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>7.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
+		<string>8.0d0</string>
 		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>8.0b1</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
