--- a/AMD/EFI/OC/Kexts/WhateverGreen.kext/Contents/Info.plist
+++ b/AMD/EFI/OC/Kexts/WhateverGreen.kext/Contents/Info.plist
@@ -33,9 +33,9 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>14D125</string>
+	<string>15E60</string>
 	<key>DTSDKName</key>
-	<string>macosx10.10</string>
+	<string>macosx10.11</string>
 	<key>DTXcode</key>
 	<string>1010</string>
 	<key>DTXcodeBuild</key>
