--- a/AMD/EFI/OC/Kexts/AmdTscSync.kext/Contents/Info.plist
+++ b/AMD/EFI/OC/Kexts/AmdTscSync.kext/Contents/Info.plist
@@ -5,19 +5,19 @@
 	<key>BuildMachineOSBuild</key>
 	<string>19G73</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>VoodooTSCSyncAMD</string>
-	<key>CFBundleGetInfoString</key>
-	<string>1.3.0, Copyright 2009 Cosmo1t and 2010 fumoboy007</string>
+	<string>AmdTscSync</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.voodoo.driver.VoodooTSCSyncAMD</string>
+	<string>org.driver.AmdTscSync</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>VoodooTSCSyncAMD</string>
+	<string>AmdTscSync</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,7 +25,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3.0</string>
+	<string>2.0.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -33,23 +33,23 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16C58</string>
+	<string>17A315g</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.13</string>
 	<key>DTXcode</key>
 	<string>1150</string>
 	<key>DTXcodeBuild</key>
 	<string>11E608c</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>VoodooTSCSyncAMD</key>
+		<key>AmdTscSync</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.voodoo.driver.VoodooTSCSyncAMD</string>
+			<string>org.driver.AmdTscSync</string>
 			<key>IOClass</key>
-			<string>VoodooTSCSyncAMD</string>
+			<string>AmdTscSync</string>
 			<key>IOMatchCategory</key>
-			<string>VoodooTSCSyncAMD</string>
+			<string>AmdTscSync</string>
 			<key>IOPropertyMatch</key>
 			<dict>
 				<key>IOCPUNumber</key>
@@ -60,7 +60,11 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.12</string>
+	<string>10.13</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2020 Cosmo1t fumoboy007</string>
+	<key>OSBundleCompatibleVersion</key>
+	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.kpi.iokit</key>
